--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  
+
   <h2>Editavel</h2>
 
-  <div class="x-campo"></div>
+  <div campo=""></div>
 
   <hr>
 
@@ -20,10 +20,28 @@
   <br>
   <br>
   <br>
-  
-  <div class="x-campo"></div>
+
+  <div campo=""></div>
 
   <hr>
+
+  <div items>
+    <div class="wrapper">
+      item test:
+      <div item></div>
+    </div>
+
+    <div class="wrapper">
+      item test:
+      <div item></div>
+    </div>
+
+    <div class="wrapper">
+      item test:
+      <div item></div>
+    </div>
+
+  </div>
 
   <script src="index.js"></script>
 </body>
