--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
   <h2>Editavel</h2>
 
-  <div campo=""></div>
+  <div field></div>
 
   <hr>
 
@@ -21,7 +21,7 @@
   <br>
   <br>
 
-  <div campo=""></div>
+  <div field></div>
 
   <hr>
 
