added new list andcomments

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,28 @@
 
   </div>
 
+  <p>
+    items2
+  </p>
+
+  <div items>
+    <div class="wrapper">
+      item test:
+      <div item></div>
+    </div>
+
+    <div class="wrapper">
+      item test:
+      <div item></div>
+    </div>
+
+    <div class="wrapper">
+      item test:
+      <div item></div>
+    </div>
+
+  </div>
+
   <script src="index.js"></script>
 </body>
 
