finished formatFatherChild logic

--- a/src/index.html
+++ b/src/index.html
@@ -27,39 +27,36 @@
 
   <div items>
     <div class="wrapper">
-      item test:
+      <h3 head></h3>
       <div item></div>
     </div>
 
     <div class="wrapper">
-      item test:
+      <h3 head></h3>
       <div item></div>
     </div>
 
     <div class="wrapper">
-      item test:
+      <h3 head></h3>
       <div item></div>
     </div>
 
   </div>
 
-  <p>
+  <h1>
     items2
-  </p>
+  </h1>
 
   <div items>
     <div class="wrapper">
-      item test:
       <div item></div>
     </div>
 
     <div class="wrapper">
-      item test:
       <div item></div>
     </div>
 
     <div class="wrapper">
-      item test:
       <div item></div>
     </div>
 
