splitted code, added marking

--- a/src/index.html
+++ b/src/index.html
@@ -27,17 +27,17 @@
 
   <div items>
     <div class="wrapper">
-      <h3 head></h3>
+      <div head></div>
       <div item></div>
     </div>
 
     <div class="wrapper">
-      <h3 head></h3>
+      <div head></div>
       <div item></div>
     </div>
 
     <div class="wrapper">
-      <h3 head></h3>
+      <div head></div>
       <div item></div>
     </div>
 
