finished name display

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,7 @@
 
   <div field></div>
 
-  <hr>
-
-  <br>
-  <br>
-  <br>
-  <br>
-
   <div field></div>
-
-  <hr>
 
   <div items>
     <div class="wrapper">
@@ -40,12 +31,9 @@
       <div head></div>
       <div item></div>
     </div>
-
   </div>
 
-  <h1>
-    items2
-  </h1>
+  <div field></div>
 
   <div items>
     <div class="wrapper">
