changed types, added  trigger divs reference in trigger param

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <div field></div>
 
-  <div items>
+  <div list>
     <div class="wrapper">
       <div head></div>
       <div item></div>
@@ -35,7 +35,7 @@
 
   <div field></div>
 
-  <div items>
+  <div list>
     <div class="wrapper">
       <div item></div>
     </div>
