added materialize,  added default addon to triggers

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
+  <title>Dynamic Text</title>
 </head>
 
-<body>
+<body class="container">
 
   <h2>Editavel</h2>
 
@@ -16,39 +20,38 @@
 
   <div field></div>
 
-  <div list>
-    <div class="wrapper">
+  <ul list class="collection">
+    <li class="collection-item">
       <div head></div>
       <div item></div>
-    </div>
+    </li>
 
-    <div class="wrapper">
+    <li class="collection-item">
       <div head></div>
       <div item></div>
-    </div>
+    </li>
 
-    <div class="wrapper">
+    <li class="collection-item">
       <div head></div>
       <div item></div>
-    </div>
-  </div>
+    </li>
+  </ul>
 
   <div field></div>
 
-  <div list>
-    <div class="wrapper">
+  <ul list class="collection">
+    <li class="collection-item">
       <div item></div>
-    </div>
+    </li>
 
-    <div class="wrapper">
+    <li class="collection-item">
       <div item></div>
-    </div>
+    </li>
 
-    <div class="wrapper">
+    <li class="collection-item">
       <div item></div>
-    </div>
-
-  </div>
+    </li>
+  </ul>
 
   <script src="index.js"></script>
 </body>
