finished inline text

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
 
   <title>Dynamic Text</title>
+
+  <style>
+    .linhas {
+      border-top: 1px black solid;
+      border-bottom: 1px black solid;
+      margin: 10px 0;
+    }
+
+    .verde {
+      color: green;
+    }
+
+    .azul {
+      color: blue;
+    }
+  </style>
 </head>
 
 <body class="container">
