--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     </li>
   </ul>
 
-  <script src="./main.bundle.js"></script>
+  <!-- <script src="./main.bundle.js"></script> -->
 </body>
 
 </html>
