--- a/public/index.parcel.html
+++ b/public/index.parcel.html
@@ -15,6 +15,44 @@
 
 <body class="container">
 
+  <h2>Editavel</h2>
+
+  <div field></div>
+
+  <div field></div>
+
+  <ul list class="collection">
+    <li class="collection-item">
+      <div head></div>
+      <div item></div>
+    </li>
+
+    <li class="collection-item">
+      <div head></div>
+      <div item></div>
+    </li>
+
+    <li class="collection-item">
+      <div head></div>
+      <div item></div>
+    </li>
+  </ul>
+
+  <div field></div>
+
+  <ul list class="collection">
+    <li class="collection-item">
+      <div item></div>
+    </li>
+
+    <li class="collection-item">
+      <div item></div>
+    </li>
+
+    <li class="collection-item">
+      <div item></div>
+    </li>
+  </ul>
 
   <script src="./index.parcel.ts"></script>
 </body>
