--- a/public/index.html
+++ b/public/index.html
@@ -39,18 +39,12 @@
 
   <div field></div>
 
-  <ul list class="collection">
-    <li class="collection-item">
+  <ul model class="collection">
+
+    <li for-model class="collection-item">
       <div item></div>
     </li>
 
-    <li class="collection-item">
-      <div item></div>
-    </li>
-
-    <li class="collection-item">
-      <div item></div>
-    </li>
   </ul>
 
   <!-- <script src="./main.bundle.js"></script> -->
