--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
 
   <h2>Editavel</h2>
 
-  <div field></div>
+  <div trigger=""></div>
 
-  <div field></div>
+  <div trigger></div>
 
-  <ul list class="collection">
+  <ul trigger="list" class="collection">
     <li class="collection-item">
       <div head></div>
       <div item></div>
@@ -37,34 +37,25 @@
     </li>
   </ul>
 
-  <div field></div>
+  <div trigger="default"></div>
 
-  <table model class="striped responsive-table">
-    <thead>
-      <tr>asd</tr>
-    </thead>
+  <ul trigger="list" class="collection">
+    <li class="collection-item">
+      <div head></div>
+      <div item></div>
+    </li>
 
-    <tbody>
+    <li class="collection-item">
+      <div head></div>
+      <div item></div>
+    </li>
 
-      <tr for-model>
+    <li class="collection-item">
+      <div head></div>
+      <div item></div>
+    </li>
 
-        <td>
-          {{}}
-        </td>
-        <td>{{}}</td>
-        <td>
-          <ul>
-            <li for-model>{{}}</li>
-          </ul>
-        </td>
-        <td>{{}}</td>
-
-      </tr>
-
-    </tbody>
-  </table>
-
-  <!-- <script src="./main.bundle.js"></script> -->
+    <!-- <script src="./main.bundle.js"></script> -->
 </body>
 
 </html>
