--- a/public/index.parcel.html
+++ b/public/index.parcel.html
@@ -17,42 +17,19 @@
 
   <h2>Editavel</h2>
 
-  <div field></div>
+  <div field='1-campo'></div>
 
-  <div field></div>
+  <div field='2-campo'></div>
 
-  <ul list class="collection">
-    <li class="collection-item">
-      <div head></div>
-      <div item></div>
-    </li>
+  <div field='3-campo'></div>
 
-    <li class="collection-item">
-      <div head></div>
-      <div item></div>
-    </li>
+  <div field="model">
 
-    <li class="collection-item">
-      <div head></div>
-      <div item></div>
-    </li>
-  </ul>
+    <div external="cards">external works</div>
 
-  <div field></div>
+    <div external="list">list works</div>
 
-  <ul list class="collection">
-    <li class="collection-item">
-      <div item></div>
-    </li>
-
-    <li class="collection-item">
-      <div item></div>
-    </li>
-
-    <li class="collection-item">
-      <div item></div>
-    </li>
-  </ul>
+  </div>
 
   <script src="./index.parcel.ts"></script>
 </body>
