updated externals for further testing

--- a/public/index.parcel.html
+++ b/public/index.parcel.html
@@ -25,9 +25,19 @@
 
   <div field="model">
 
-    <div external="cards">external works</div>
+    <div external="cards">
+      <h1>asd</h1>
+      <p>
+        nice
+      </p>
+    </div>
 
-    <div external="list">list works</div>
+    <div external="list">
+      <h1>lkist</h1>
+      <p>
+        nice
+      </p>
+    </div>
 
   </div>
 
