added separate variables for selectors

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
 <body class="container">
 
   <h2>Editavel</h2>
-  
+
   <div field='1-campo'></div>
 
   <div field='2-campo'></div>
 
-  <div field='3-campo'></div> 
- 
+  <div field='3-campo'></div>
+
 
   <div field="model">
 
@@ -35,14 +35,13 @@
 
     <div external="list" lines='list'>
       <h1>list external</h1>
-      <p line> </p>
-      <p line> </p>
-      <p line> </p>
+      <div class="d-line"></div>
+      <div class="d-line"></div>
+      <div class="d-line"></div>
 
       <hr>
 
-      <p line></p>
-
+      <div class="d-line"></div>
     </div>
 
   </div>
