--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
 
   <h2>Editavel</h2>
 
-  <div field='1-campo'></div>
+  <div field='field1'></div>
 
-  <div field='2-campo'></div>
+  <div field='field3'></div>
 
-  <div field='3-campo'></div>
+  <div field='field2'></div>
 
 
   <div field="model">
