--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,24 @@
 
   <h2>Editavel</h2>
 
+  <div loop='loop'>
+
+    <div class="model">
+
+      <label>line eg</label>
+      <br>
+      <span class="model-line"></span>
+      <br>
+      <br>
+
+    </div>
+
+  </div>
+
+  <hr>
+  <hr>
+  <hr>
+
   <div field='field1'></div>
 
   <div field='field3'></div>
