finished new feature, improved code

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
 
   <div loop='loop'>
 
+    <div external='test4' class="red">
+      nice
+    </div>
+
     <div class="model">
 
       <label>line eg</label>
