changed names, added docs

--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
 
   <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css" />
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css' />
 
   <title>Dynamic Text</title>
 
 </head>
 
-<body class="container">
+<body class='container'>
 
   <h2>Editavel</h2>
 
   <div loop='loop'>
 
-    <div external='test4' class="red">
+    <div external='test4' class='red'>
       nice
     </div>
 
-    <div class="model">
+    <div class='model'>
 
       <label>line eg</label>
       <br>
-      <span class="model-line"></span>
+      <span class='model-line'></span>
       <br>
       <br>
 
@@ -46,30 +46,30 @@
   <div field='field2'></div>
 
 
-  <div field="model">
+  <div field='model'>
 
-    <div external="cards">
+    <div external='cards'>
       <h1>cards external</h1>
       <p>
         nice1
       </p>
     </div>
 
-    <div external="list" lines='list'>
+    <div external='list' lines='list'>
       <h1>list external</h1>
-      <div class="d-line"></div>
-      <div class="d-line"></div>
-      <div class="d-line"></div>
+      <div line></div>
+      <div line></div>
+      <div line></div>
 
       <hr>
 
-      <div class="d-line"></div>
+      <div line></div>
     </div>
 
   </div>
 
 
-  <script src="./index.ts"></script>
+  <script src='./index.ts'></script>
 </body>
 
 </html>
