fixed bug, started adding numbered lines

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   <hr>
 
   <div field='field1'></div>
-  
+
   <div field='field1'></div>
 
   <div field='field3'></div>
@@ -59,13 +59,13 @@
 
     <div external='list' lines='list'>
       <h1>list external</h1>
-      <div line></div>
-      <div line></div>
-      <div line></div>
+      <div>[line]</div>
+      <div>[line]</div>
 
       <hr>
 
-      <div line></div>
+      <a href=[line]>[line]</a>
+
     </div>
 
   </div>
