--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,10 @@
       <h1>list external</h1>
       <div>[line]</div>
       <div>[line]</div>
-
-      <hr>
+      <div>[line]</div>
+      <div>[line-0]</div>
+      <div>[line-3]</div>
+      <div>[line--]</div>
 
       <a href=[line]>[line]</a>
 
