added primitive prefab

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,15 @@
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
 
   <!-- Compiled and minified CSS -->
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css' />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
   <title>Dynamic Text</title>
 
 </head>
 
 <body class='container'>
+
+  <div prefab=prefab-test-1 type=field></div>
 
   <h2>Editavel</h2>
 
@@ -38,8 +40,6 @@
   <hr>
   <hr>
   <hr>
-
-  <div field='field1'></div>
 
   <div field='field1'></div>
 
