started adding loops and optimizations

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
 
       <label>line eg</label>
       <br>
-      <span class='model-line'></span>
-      <br>
+      <span>[[line]]</span>
+      <span>[[line]]</span>
       <br>
 
     </div>
