added new loop feature, rewrote loop renderer

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
   <h2>Editavel</h2>
 
-  <div loop='loop'>
+  <div loop='loop' breaks=2>
 
     <div external='test4'>
       nice
@@ -29,8 +29,8 @@
 
       <label>line eg</label>
       <br>
-      <span>[[line]]</span>
-      <span>[[line]]</span>
+      <div class="red">[line]</div>
+      <div class="blue">[line]</div>
       <br>
 
     </div>
