--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.min.css">
 
   <title>Dynamic Text</title>
 
