--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
       <label>line eg</label>
       <br>
-      <div class="red">[line]</div>
+      <div class="red model-line">[line]</div>
       <div class="blue">[line]</div>
       <br>
 
