added new branch resolver

--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,7 @@
   <hr>
   <hr>
 
-  <div field='field1'></div>
-
-  <div field='field3'></div>
-
-  <div field='field2'></div>
+  <div field='field'></div>
 
 
   <div field='model'>
@@ -67,6 +63,16 @@
 
       <a href=[line]>[line]</a>
 
+    </div>
+
+  </div>
+
+  <hr>
+
+  <div field=model>
+
+    <div external="list" field=list>
+      <div>[line-3]</div>
     </div>
 
   </div>
