updated packages, regex bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,18 @@
   <div prefab=prefab-test-1 type=field></div>
 
   <h2>Editavel</h2>
-
+  
   <div loop='loop' breaks=2>
 
     <div external='test4'>
-      nice
+      test-4 external
     </div>
 
     <div class='model'>
 
       <label>line eg</label>
       <br>
-      <div class="red model-line">[line]</div>
+      <div class="red">[line]</div>
       <div class="blue">[line]</div>
       <br>
 
