--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       test-4 external
     </div>
 
-    <div class='model'>
+    <div class='model some-class'>
 
       <label>line eg</label>
       <br>
