new prefab feature

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,13 @@
 
 <body class='container'>
 
-  <div prefab=prefab-test-1 type=field></div>
+  <div prefab=prefab-test-1>
+    <section type=field></section>
+    <section type=lines>[line-1]</section>
+  </div>
 
   <h2>Editavel</h2>
-  
+
   <div loop='loop' breaks=2>
 
     <div external='test4'>
