started adding new types feature

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body class='container'>
 
-  <div prefab=prefab-test-1>
+  <div external=prefab-test-1>
     <section type=field></section>
     <section type=lines>[line-1]</section>
   </div>
