--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
   <div field='field'></div>
 
 
+  <h4>MODEL</h4>
   <div field='model'>
 
     <div external='cards'>
@@ -72,6 +73,7 @@
 
   <hr>
 
+  <h4>MODEL</h4>
   <div field=model>
 
     <div external="list" field=list>
