--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
     <section type=lines>[line-1]</section>
   </div>
 
+  <div external=prefab-2>
+    <section type=field></section>
+    <section type=lines>[line-1]</section>
+  </div>
+
+
+
   <h2>Editavel</h2>
 
   <div loop='loop' breaks=2>
