fixed external regex

--- a/public/index.html
+++ b/public/index.html
@@ -37,18 +37,18 @@
     <div class='model some-class'>
 
       <label>line eg</label>
-      <br>
-      <div class="red">[line]</div>
-      <div class="blue">[line]</div>
-      <br>
+      <br />
+      <div class="line-1">[line]</div>
+      <div class="line-2">[line]</div>
+      <br />
 
     </div>
 
   </div>
 
-  <hr>
-  <hr>
-  <hr>
+  <hr />
+  <hr />
+  <hr />
 
   <div field='field'></div>
 
@@ -78,7 +78,7 @@
 
   </div>
 
-  <hr>
+  <hr />
 
   <h4>MODEL</h4>
   <div field=model>
