add inline , kinda

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div external=prefab-2>
-    <section type=field></section>
+    <section type=field inline></section>
     <section type=lines>[line-1]</section>
   </div>
 
