--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div external=prefab-2>
-    <section type=field inline></section>
+    <section type=field></section>
     <section type=lines>[line-1]</section>
   </div>
 
@@ -38,8 +38,8 @@
 
       <label>line eg</label>
       <br />
-      <div class="line-1">[line]</div>
-      <div class="line-2">[line]</div>
+      <div class="line-1 red">[line]</div>
+      <div class="line-2 blue">[line]</div>
       <br />
 
     </div>
@@ -81,13 +81,7 @@
   <hr />
 
   <h4>MODEL</h4>
-  <div field=model>
-
-    <div external="list" field=list>
-      <div>[line-3]</div>
-    </div>
-
-  </div>
+  <!-- <div field=model></div> -->
 
 
 </body>
