--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div external='list' lines='list'>
-      <h1>list external</h1>
+      <h1 lines=loop>list external [line-3]</h1>
       <div>[line]</div>
       <div>[line]</div>
       <div>[line]</div>
